# enap-artigos

./: README.md  pyproject.toml  requirements.txt
scripts/: educacao-executiva.py  tika-extract.py
