[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Scripts para download de artigos públicos da ENAP"
authors = ["andrecorumba"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
